Fix max width overflow
Make full width stuff slightly larger on small desktop

--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -10,9 +10,7 @@
     }
   }
 
-  @media screen and (min-width: $desktop) {
-    max-width: 60%;
-  }
+  @include full-width;
 }
 
 .read-more-link {
