--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -22,4 +22,5 @@ $weight-bold: 600;
 
 $tablet: 768px;
 $desktop: 960px;
+$desktop-lg: 1025px
 
